tolk-tester/tests/invalid-syntax/err-3919.tolk
struct Z { }

struct Big {
    f0: Z;
    f1: Z;
    f2: Z;
    f3: Z;
    f4: Z;
    f5: Z;
    f6: Z;
    f7: Z;
    f8: Z;
    f9: Z;
    f10: Z;
    f11: Z;
    f12: Z;
    f13: Z;
    f14: Z;
    f15: Z;
    f16: Z;
    f17: Z;
    f18: Z;
    f19: Z;
    f20: Z;
    f21: Z;
    f22: Z;
    f23: Z;
    f24: Z;
    f25: Z;
    f26: Z;
    f27: Z;
    f28: Z;
    f29: Z;
    f30: Z;
    f31: Z;
    f32: Z;
    f33: Z;
    f34: Z;
    f35: Z;
    f36: Z;
    f37: Z;
    f38: Z;
    f39: Z;
    f40: Z;
    f41: Z;
    f42: Z;
    f43: Z;
    f44: Z;
    f45: Z;
    f46: Z;
    f47: Z;
    f48: Z;
    f49: Z;
    f50: Z;
    f51: Z;
    f52: Z;
    f53: Z;
    f54: Z;
    f55: Z;
    f56: Z;
    f57: Z;
    f58: Z;
    f59: Z;
    f60: Z;
    f61: Z;
    f62: Z;
    f63: Z;
    f64: Z;
    f65: Z;
    f66: Z;
    f67: Z;
    f68: Z;
    f69: Z;
    f70: Z;
    f71: Z;
    f72: Z;
    f73: Z;
    f74: Z;
    f75: Z;
    f76: Z;
    f77: Z;
    f78: Z;
    f79: Z;
    f80: Z;
    f81: Z;
    f82: Z;
    f83: Z;
    f84: Z;
    f85: Z;
    f86: Z;
    f87: Z;
    f88: Z;
    f89: Z;
    f90: Z;
    f91: Z;
    f92: Z;
    f93: Z;
    f94: Z;
    f95: Z;
    f96: Z;
    f97: Z;
    f98: Z;
    f99: Z;
    f100: Z;
    f101: Z;
    f102: Z;
    f103: Z;
    f104: Z;
    f105: Z;
    f106: Z;
    f107: Z;
    f108: Z;
    f109: Z;
    f110: Z;
    f111: Z;
    f112: Z;
    f113: Z;
    f114: Z;
    f115: Z;
    f116: Z;
    f117: Z;
    f118: Z;
    f119: Z;
    f120: Z;
    f121: Z;
    f122: Z;
    f123: Z;
    f124: Z;
    f125: Z;
    f126: Z;
    f127: Z;
    f128: Z;
    f129: Z;
    f130: Z;
    f131: Z;
    f132: Z;
    f133: Z;
    f134: Z;
    f135: Z;
    f136: Z;
    f137: Z;
    f138: Z;
    f139: Z;
    f140: Z;
    f141: Z;
    f142: Z;
    f143: Z;
    f144: Z;
    f145: Z;
    f146: Z;
    f147: Z;
    f148: Z;
    f149: Z;
    f150: Z;
    f151: Z;
    f152: Z;
    f153: Z;
    f154: Z;
    f155: Z;
    f156: Z;
    f157: Z;
    f158: Z;
    f159: Z;
    f160: Z;
    f161: Z;
    f162: Z;
    f163: Z;
    f164: Z;
    f165: Z;
    f166: Z;
    f167: Z;
    f168: Z;
    f169: Z;
    f170: Z;
    f171: Z;
    f172: Z;
    f173: Z;
    f174: Z;
    f175: Z;
    f176: Z;
    f177: Z;
    f178: Z;
    f179: Z;
    f180: Z;
    f181: Z;
    f182: Z;
    f183: Z;
    f184: Z;
    f185: Z;
    f186: Z;
    f187: Z;
    f188: Z;
    f189: Z;
    f190: Z;
    f191: Z;
    f192: Z;
    f193: Z;
    f194: Z;
    f195: Z;
    f196: Z;
    f197: Z;
    f198: Z;
    f199: Z;
    f200: Z;
    f201: Z;
    f202: Z;
    f203: Z;
    f204: Z;
    f205: Z;
    f206: Z;
    f207: Z;
    f208: Z;
    f209: Z;
    f210: Z;
    f211: Z;
    f212: Z;
    f213: Z;
    f214: Z;
    f215: Z;
    f216: Z;
    f217: Z;
    f218: Z;
    f219: Z;
    f220: Z;
    f221: Z;
    f222: Z;
    f223: Z;
    f224: Z;
    f225: Z;
    f226: Z;
    f227: Z;
    f228: Z;
    f229: Z;
    f230: Z;
    f231: Z;
    f232: Z;
    f233: Z;
    f234: Z;
    f235: Z;
    f236: Z;
    f237: Z;
    f238: Z;
    f239: Z;
    f240: Z;
    f241: Z;
    f242: Z;
    f243: Z;
    f244: Z;
    f245: Z;
    f246: Z;
    f247: Z;
    f248: Z;
    f249: Z;
    f250: Z;
    f251: Z;
    f252: Z;
    f253: Z;
    f254: Z;
    next: ();
}

/**
@compilation_should_fail
@stderr too big struct (64 or more fields)
@stderr struct Big
 */
